# Auto-Alibaba

./: .gitignore  AGENTS.md  README.md  START-HERE.md  agent-onboard.ps1  pyproject.toml  setup.ps1  开始使用.ps1
.agents/plugins/: marketplace.json
app/: __init__.py  cli.py
app/domain/: __init__.py  errors.py  models.py  states.py
app/ingest/: __init__.py  inventory.py  model_number.py
app/products/: __init__.py  detail_assets.py  detail_policy.py  geo_detail.py  input_onboarding.py  loader.py  main_images.py  onboarding.py  preparer.py  specification_policy.py  title_policy.py
app/publisher/: __init__.py  album_policy.py  form_plan.py  orchestrator.py  playwright_port.py  quality.py
app/workflow/: __init__.py  state_store.py
config/: detail_templates.yaml
docs/superpowers/plans/: 2026-07-11-1688-draft-automation.md  2026-07-11-w3g710-reference-detail-implementation.md  2026-07-13-model-folder-key.md  2026-07-13-portable-github-distribution.md  2026-07-13-product-input-onboarding.md  2026-07-13-upload-1688-products-skill.md  2026-07-13-upload-pipeline-hardening.md  2026-07-14-1688-geo-title-sku-detail-revision.md  2026-07-14-multi-brand-fan-upload.md  2026-07-14-unified-auto-alibaba-rename.md  2026-07-15-agent-first-beginner-onboarding.md
docs/superpowers/specs/: 2026-07-11-1688-fan-draft-automation-design.md  (+10 more)
tests/artifacts/: test_a2e250_geo_detail.py
tests/unit/: test_cli.py  test_cli_run.py  test_distribution_contract.py  test_doctor.py  test_init_product_cli.py  test_onboard_cli.py  test_run_upload.py  test_upload_skill_contract.py
(+39 files in other folders)
