[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "1688-draft-automation"
version = "0.1.0"
description = "Persistent draft-only 1688 fan product uploader"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12",
  "jinja2>=3.1",
  "openpyxl>=3.1",
  "playwright>=1.52",
  "pydantic>=2.10",
  "pypdf>=5.0",
  "pyyaml>=6.0",
  "typer>=0.15",
]

[project.optional-dependencies]
dev = ["mypy>=1.15", "pytest>=8.3", "pytest-asyncio>=0.25", "ruff>=0.11"]

[project.scripts]
upload-product = "app.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.setuptools.packages.find]
include = ["app*"]
